# swagger-golang-bazelgen-exp

./: .gitignore  .gitpod.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
.gitpod/: Dockerfile
bazel/go/: deps.bzl
bazel/rules/: deps.bzl
bazel/rules/rules_swagger/: defs.bzl
bazel/rules/rules_toolchains/: WORKSPACE  defs.bzl
bazel/toolchains/: swagger.toolchain
cmd/golang-jsonschema/: BUILD.bazel  main.go  toolchain.json  toolchain.yaml
pkg/apis/example.io/v1alpha/: BUILD.bazel  extensions.go  toolchain.go  toolchain_platform_info.go
pkg/apis/example.io/v2alpha/: BUILD.bazel  toolchain.go  toolchain_platform_info.go
spec/: BUILD.bazel  swagger.yml
spec/v2alpha/: swagger.yml
